# hermod-messanger-server

./: .gitignore  404.html  AUTHORS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EMOJIS.md  INSTALL.sh  LICENSE  README.md  SECURITY.md  SETUP.md  SETUP_DEV.sh  contributors.html  dim-markdown  dim-protocol-draft.txt  index.html  log4rs.bak.yml  log4rs.yml  logging_config.yml  print.html  protocol.txt  rustfmt.toml  searchindex.js  searchindex.json
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature_request.md
.github/workflows/: deploy.yml
code/: index.html  software-stack.html
developement/: breaking_changes.html  brief_guide_to_developement.html  code_style.html  submitting_patches.html
docs/: book.toml
docs/source/: SUMMARY.md  contributors.md  installation.md
docs/source/code/: index.md  software-stack.md
docs/source/developement/: breaking_changes.md  brief_guide_to_developement.md  code_style.md  submitting_patches.md
docs/source/usage/: exit-codes.md
security/: best_practices.html  index.html
shell/: INSTALL.sh  RETEST.sh  UNINSTALL.sh
source/: _connection_handler.rs  _filenotice.text  _filenotice.txt  _packet_handler.rs  connection.rs  connection_handler.rs  denest_utilities.rs  deserialization.rs  main.rs  network_manager.rs  packet_handler.rs  responder.rs  startup.rs  terminal_out.rs  threading.rs
source/connection/: packets.rs
usage/: exit-codes.html  index.html
