[package]
name = "codename_bonfire_server"
licence = "AGPL 3.0 Only"
version = "0.1.0"
edition = "2021"  # Rust Edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "codename_bonfire_server"
path = "source/main.rs"

# [dev-dependencies]
# [build-dependencies]

[dependencies]

# MIT Licence
aes-gcm-siv = "0.11.1"  # Apache 2.0  OR  MIT
config = "0.13.1"       # Apache 2.0  OR  MIT

# FOR CONFIG: 
# INI Format
# `hermod.config`