[package]
name = "codename_bonfire_server"
licence = "AGPL 3.0 Only"
version = "0.1.0"
edition = "2021"  # Rust Edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "codename_bonfire_server"
path = "source/main.rs"

# [dev-dependencies]
# [build-dependencies]

[dependencies] # Sorted By Licence

# MIT Licence Crates
aes-gcm-siv = "0.11.1"  # MIT  -OR-  Apache 2.0

# Config is `hermod.config` and is in INI format since it is simple and fast
# to parse.
ini = "1.3.0"           # MIT  -OR-  LGPL 3.0 Or Later

log = "0.4"
log4rs = "1"

# FOR CONFIG: 
# INI Format
# `hermod.config`