[package]
name = "hermod-server"
licence = "AGPL 3.0 Only"
version = "0.1.0"
edition = "2021"  # Rust Edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "codename_bonfire_server"
path = "source/main.rs"

[dependencies] # Sorted By Licence

# MIT Licence Crates
aes-gcm-siv = "0.11.1"  # MIT  -OR-  Apache 2.0
ini = "1.3.0"           # MIT  -OR-  LGPL 3.0 Or Later
log = "0.4"             # MIT  -OR-  Apache 2.0
log4rs = "1"            # MIT  -OR-  Apache 2.0
native-tls = "0.2.11"   # MIT  -OR-  Apache 2.0
#guid = "0.1.0"          # MIT  -OR-  Apache 2.0

# GNU GPL 3.0
licenser = "1.2.1"      # GPL 3.0

# FOR CONFIG:
# INI Format -- simple and fast to parse
# `hermod.config`

# [dev-dependencies]
# [build-dependencies]
